# ped4you-cross-detection

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  inference.py  main.py  pyproject.toml  requirements-cpu.txt  requirements-full.txt  requirements.txt  test.py
.devcontainer/: devcontainer.json
.github/workflows/: fly.yml
inference/: README.md  requirements.txt
ped4you_cross_detection/: __init__.py
tests/: conftest.py  test_docker.py  test_inference.py  test_main.py
