[tool.poetry]
name = "ped4you-cross-detection"
version = "0.1.0"
description = ""
authors = ["Nutchanon Ninyawee <nutchanon@codustry.com>"]
readme = "README.md"
packages = [{include = "ped4you_cross_detection"}]

[tool.poetry.dependencies]
python = "^3.10"
fastai = "^2.7.12"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
httpx = "^0.24.0"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
